--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7142,10 +7142,10 @@ fieldset {
               .bootbox.login-signin-popup .modal-dialog .modal-content .modal-body .popup-body .dentist .form-register .step.third .phone .input-phone {
                 flex: 1; }
             .bootbox.login-signin-popup .modal-dialog .modal-content .modal-body .popup-body .dentist .form-register .step.fourth .avatar {
-              padding-right: 20px;
-              width: 50%; }
+              width: 180px; }
             .bootbox.login-signin-popup .modal-dialog .modal-content .modal-body .popup-body .dentist .form-register .step.fourth .specializations {
-              width: 50%; }
+              width: calc(100% - 180px);
+              padding-left: 20px; }
               .bootbox.login-signin-popup .modal-dialog .modal-content .modal-body .popup-body .dentist .form-register .step.fourth .specializations h4 {
                 padding-bottom: 10px; }
               .bootbox.login-signin-popup .modal-dialog .modal-content .modal-body .popup-body .dentist .form-register .step.fourth .specializations .pretty {
@@ -7155,6 +7155,9 @@ fieldset {
                   border-color: #126585 !important; }
                 .bootbox.login-signin-popup .modal-dialog .modal-content .modal-body .popup-body .dentist .form-register .step.fourth .specializations .pretty label {
                   text-indent: 25px; }
+              @media screen and (max-width: 767px) {
+                .bootbox.login-signin-popup .modal-dialog .modal-content .modal-body .popup-body .dentist .form-register .step.fourth .specializations {
+                  padding-left: 10px; } }
             .bootbox.login-signin-popup .modal-dialog .modal-content .modal-body .popup-body .dentist .form-register .step.fourth .combobox-container .input-group {
               display: block; }
             .bootbox.login-signin-popup .modal-dialog .modal-content .modal-body .popup-body .dentist .form-register .step.fourth .combobox-container .input-group-addon.dropdown-toggle {
@@ -7220,11 +7223,11 @@ fieldset {
           .bootbox.login-signin-popup .modal-dialog .modal-content .modal-body .popup-body .dentist .form-register, .bootbox.login-signin-popup .modal-dialog .modal-content .modal-body .popup-body .patient .form-register {
             display: none; }
           .bootbox.login-signin-popup .modal-dialog .modal-content .modal-body .popup-body .dentist .form-register, .bootbox.login-signin-popup .modal-dialog .modal-content .modal-body .popup-body .dentist .form-login, .bootbox.login-signin-popup .modal-dialog .modal-content .modal-body .popup-body .patient .form-register, .bootbox.login-signin-popup .modal-dialog .modal-content .modal-body .popup-body .patient .form-login {
-            width: 75%;
+            width: 80%;
             margin: 0 auto; }
             @media screen and (max-width: 767px) {
               .bootbox.login-signin-popup .modal-dialog .modal-content .modal-body .popup-body .dentist .form-register, .bootbox.login-signin-popup .modal-dialog .modal-content .modal-body .popup-body .dentist .form-login, .bootbox.login-signin-popup .modal-dialog .modal-content .modal-body .popup-body .patient .form-register, .bootbox.login-signin-popup .modal-dialog .modal-content .modal-body .popup-body .patient .form-login {
-                width: 90%; } }
+                width: 95%; } }
           .bootbox.login-signin-popup .modal-dialog .modal-content .modal-body .popup-body .dentist.custom-hide, .bootbox.login-signin-popup .modal-dialog .modal-content .modal-body .popup-body .patient.custom-hide {
             visibility: hidden; }
             @media screen and (max-width: 767px) {
@@ -7967,6 +7970,16 @@ select.select-mac-fix {
         @media screen and (max-width: 767px) {
           .module.avatar .btn-wrapper label .inner .inner-label {
             font-size: 16px; } }
+.module.avatar #cropper-container.width-and-height {
+  width: 180px;
+  height: 180px; }
+.module.avatar .max-size-label label {
+  display: none;
+  cursor: pointer; }
+.module.avatar .max-size-label.active {
+  padding-top: 40px !important; }
+  .module.avatar .max-size-label.active label {
+    display: inline-block; }
 .module.step-fields .single-row {
   border-bottom: 1px solid #888888;
   -webkit-transition: 0.3s;
@@ -8884,7 +8897,7 @@ header {
       color: black;
       display: inline-block;
       padding: 15px 0; }
-      header > .container .logged-user-nav > .hidden-box-parent > span.user-name {
+      header > .container .logged-user-nav > .hidden-box-parent .color-white-on-hub {
         padding-top: 10px;
         padding-bottom: 10px; }
       header > .container .logged-user-nav > .hidden-box-parent figure.header-avatar {
