--- a/public/assets/scss/global/_global.scss
+++ b/public/assets/scss/global/_global.scss
@@ -1031,11 +1031,11 @@ fieldset {
                                     }
                                     &.fourth {
                                         .avatar {
-                                            padding-right: 20px;
-                                            width: 50%;
+                                            width: 180px;
                                         }
                                         .specializations {
-                                            width: 50%;
+                                            width: calc(100% - 180px);
+                                            padding-left: 20px;
                                             h4 {
                                                 padding-bottom: 10px;
                                             }
@@ -1048,6 +1048,9 @@ fieldset {
                                                 label {
                                                     text-indent: 25px;
                                                 }
+                                            }
+                                            @include breakpoint($xs) {
+                                                padding-left: 10px;
                                             }
                                         }
                                         .combobox-container {
@@ -1140,10 +1143,10 @@ fieldset {
                                 display: none;
                             }
                             .form-register, .form-login {
-                                width: 75%;
+                                width: 80%;
                                 margin: 0 auto;
                                 @include breakpoint($xs) {
-                                    width: 90%;
+                                    width: 95%;
                                 }
                             }
                             &.custom-hide {
