--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -647,7 +647,7 @@
   display: none;
   cursor: pointer; }
 .module.avatar .max-size-label.active {
-  padding-top: 40px !important; }
+  margin-top: 40px !important; }
   .module.avatar .max-size-label.active label {
     display: inline-block; }
 .module.step-fields .single-row {
