--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -396,6 +396,9 @@
     -moz-box-shadow: 0px 2px 10px 0 #679dca;
     -ms-box-shadow: 0px 2px 10px 0 #679dca;
     box-shadow: 0px 2px 10px 0 #679dca; }
+  @media screen and (max-width: 991px) {
+    .custom-input {
+      border: 1px solid #E0E0E0; } }
 
 .module.dentist-or-patient-section .inline-block-top picture img {
   width: 100%; }
