--- a/public/assets/scss/pages/logged-in/_my-contracts.scss
+++ b/public/assets/scss/pages/logged-in/_my-contracts.scss
@@ -8,7 +8,7 @@
         @include breakpoint($sm-down) {
             display: block;
         }
-    }
+    }/*
     ::-webkit-scrollbar {
         -webkit-appearance: none;
     }
@@ -26,11 +26,11 @@
     ::-webkit-scrollbar-track {
         background-color: white;
         @include rounded(10px);
-    }
+    }*/
     .table-container {
-        .dataTables_wrapper {
+        /*.dataTables_wrapper {
             overflow-x: scroll;
-        }
+        }*/
         .hide-this {
             display: none;
         }
