--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7386,6 +7386,34 @@ input[type='file'].hide-input {
 .display-block-important {
   display: block !important; }
 
+.bottom-fixed-container {
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  z-index: 1035; }
+  .bottom-fixed-container .privacy-policy-cookie {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background-color: rgba(10, 10, 10, 0.7);
+    color: white;
+    width: 100%;
+    font-size: 0; }
+    .bottom-fixed-container .privacy-policy-cookie .text {
+      font-size: 16px;
+      width: calc(100% - 100px); }
+      .bottom-fixed-container .privacy-policy-cookie .text .link {
+        font-weight: bold;
+        color: white;
+        text-decoration: underline; }
+    .bottom-fixed-container .privacy-policy-cookie .button {
+      width: 100px; }
+      .bottom-fixed-container .privacy-policy-cookie .button a {
+        display: block;
+        text-align: center;
+        font-size: 16px;
+        padding: 10px 0; }
+
 .response-layer, .contract-response-layer, .contract-response-success-layer {
   background-color: rgba(255, 255, 255, 0.9);
   width: 100%;
