--- a/public/assets/scss/global/_global.scss
+++ b/public/assets/scss/global/_global.scss
@@ -1352,6 +1352,40 @@ input[type='file'].hide-input {
     display: block !important;
 }
 
+.bottom-fixed-container {
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    z-index: 1035;
+    .privacy-policy-cookie {
+        padding-top: 20px;
+        padding-bottom: 20px;
+        background-color: rgba(10, 10, 10, .7);
+        color: white;
+        width: 100%;
+        font-size: 0;
+        .text {
+            font-size: 16px;
+            width: calc(100% - 100px);
+            .link {
+                font-weight: bold;
+                color: white;
+                text-decoration: underline;
+            }
+        }
+        .button {
+            width: 100px;
+            a {
+                display: block;
+                text-align: center;
+                font-size: 16px;
+                padding: 10px 0;
+            }
+        }
+    }
+}
+
 .response-layer, .contract-response-layer, .contract-response-success-layer {
     background-color: rgba(255,255,255,.9);
     width: 100%;
