--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7392,12 +7392,13 @@ input[type='file'].hide-input {
   bottom: 0;
   left: 0;
   z-index: 1035; }
-  .bottom-fixed-container .calculator {
+  .bottom-fixed-container .open-calculator {
     text-align: center; }
-    .bottom-fixed-container .calculator img {
-      width: 300px; }
+    .bottom-fixed-container .open-calculator img {
+      width: 300px;
+      margin: 0 auto; }
       @media screen and (max-width: 767px) {
-        .bottom-fixed-container .calculator img {
+        .bottom-fixed-container .open-calculator img {
           width: 220px; } }
   .bottom-fixed-container .privacy-policy-cookie {
     padding-top: 20px;
