--- a/public/assets/scss/global/_global.scss
+++ b/public/assets/scss/global/_global.scss
@@ -1358,11 +1358,10 @@ input[type='file'].hide-input {
     bottom: 0;
     left: 0;
     z-index: 1035;
-    .calculator {
+    .open-calculator {
         text-align: center;
         img {
             width: 300px;
-            margin: 0 auto;
             @include breakpoint($xs) {
                 width: 220px;
             }
