--- a/public/assets/scss/additionals/_modules.scss
+++ b/public/assets/scss/additionals/_modules.scss
@@ -153,7 +153,7 @@
     text-align: left;
     color: black;
     font-size: 20px;
-    padding: 10px 15px 10px 70px;
+    padding: 10px 15px 10px 60px;
     max-width: 350px;
     margin: 0 auto;
     cursor: pointer;
@@ -165,7 +165,9 @@
         background-image: url(/assets/uploads/civic.svg);
     }
     &.facebook-custom-btn {
-        background-image: url(/assets/uploads/facebook.svg);
+        background-color: #4267B2;
+        color: white;
+        padding: 10px 15px;
     }
 }
 
