--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6808,6 +6808,9 @@ fieldset {
 @media screen and (max-width: 767px) {
   .bootbox .modal-dialog {
     margin-bottom: 50px; } }
+.bootbox.style-anchors .modal-dialog .modal-content .modal-body a {
+  font-weight: bold;
+  text-decoration: underline; }
 .bootbox.popup-html .bootbox-close-button {
   font-size: 45px;
   margin-top: -20px;
