--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7394,7 +7394,7 @@ input[type='file'].hide-input {
   width: 100%;
   bottom: 0;
   left: 0;
-  z-index: 1035; }
+  z-index: 2000000005 !important; }
   .bottom-fixed-container .open-calculator img {
     width: 300px; }
     @media screen and (max-width: 767px) {
@@ -7434,7 +7434,9 @@ input[type='file'].hide-input {
         color: white;
         position: absolute;
         right: 10px;
-        top: 0; }
+        top: 0;
+        background: transparent;
+        border: 0; }
       .bottom-fixed-container .privacy-policy-cookie .customize-cookies .cookie-icon {
         width: 40px; }
       .bottom-fixed-container .privacy-policy-cookie .customize-cookies .cookies-options-list {
