--- a/public/assets/scss/global/_global.scss
+++ b/public/assets/scss/global/_global.scss
@@ -1587,6 +1587,15 @@ input[type='file'].hide-input {
     @include simple_transition(.3s);
 }
 
+.loading-background {
+    background-image: url(/assets/images/loader.gif) !important;
+    background-size: 20px auto;
+    padding-right: 25px !important;
+    background-position: center right;
+    background-repeat: no-repeat;
+    @include simple_transition(.3s);
+}
+
 .popover-el {
     cursor: pointer;
 }
