--- a/public/assets/scss/global/_global.scss
+++ b/public/assets/scss/global/_global.scss
@@ -1589,9 +1589,9 @@ input[type='file'].hide-input {
 
 .loading-background {
     background-image: url(/assets/images/loader.gif) !important;
-    background-size: 20px auto;
+    background-size: 30px auto;
     padding-right: 25px !important;
-    background-position: center right;
+    background-position: center right 5px;
     background-repeat: no-repeat;
     @include simple_transition(.3s);
 }
