--- a/public/assets/scss/additionals/_modules.scss
+++ b/public/assets/scss/additionals/_modules.scss
@@ -931,6 +931,20 @@
                 position: absolute;
                 left: 46%;
             }
+            .steps-navigation {
+                border-top: 1.5px solid #d2d2d2;
+                a {
+                    width: 50%;
+                    display: inline-block;
+                    text-align: center;
+                    color: #888888;
+                    padding: 10px 5px;
+                    &.active {
+                        color: white;
+                        background-color: $blue_green_color;
+                    }
+                }
+            }
         }
         .clock {
             display: inline-block;
