--- a/public/assets/scss/additionals/_modules.scss
+++ b/public/assets/scss/additionals/_modules.scss
@@ -939,9 +939,23 @@
                     text-align: center;
                     color: #888888;
                     padding: 10px 5px;
+                    .white-check {
+                        display: none;
+                    }
+                    .gray-check {
+                        display: inline-block;
+                        vertical-align: middle;
+                    }
                     &.active {
                         color: white;
                         background-color: $blue_green_color;
+                        .white-check {
+                            display: inline-block;
+                            vertical-align: middle;
+                        }
+                        .gray-check {
+                            display: none;
+                        }
                     }
                 }
             }
@@ -1066,6 +1080,11 @@
                 color: #888888;
                 @include rounded(0 0 20px 20px);
                 @include box-shadow(0 2px 6px 0 rgba(0,0,0,.4));
+            }
+        }
+        .camping-for-popups {
+            .popup-step-two {
+                display: none;
             }
         }
         .contract-header {
