--- a/public/assets/scss/additionals/_modules.scss
+++ b/public/assets/scss/additionals/_modules.scss
@@ -931,41 +931,6 @@
                 position: absolute;
                 left: 46%;
             }
-            .steps-navigation {
-                border-top: 1.5px solid #d2d2d2;
-                a {
-                    width: 50%;
-                    display: inline-block;
-                    text-align: center;
-                    color: #888888;
-                    padding: 10px 5px;
-                    .white-check, .gray-check {
-                        display: none;
-                    }
-                    &.passed-step {
-                        .white-check {
-                            display: none;
-                        }
-                        .gray-check {
-                            display: inline-block;
-                            vertical-align: middle;
-                        }
-                        &.active {
-                            .white-check {
-                                display: inline-block;
-                                vertical-align: middle;
-                            }
-                            .gray-check {
-                                display: none;
-                            }
-                        }
-                    }
-                    &.active {
-                        color: white;
-                        background-color: $blue_green_color;
-                    }
-                }
-            }
         }
         .clock {
             display: inline-block;
@@ -1081,19 +1046,6 @@
                 }
             }
         }
-        .contract-footer {
-            .wrapper {
-                background-color: #ebebeb;
-                color: #888888;
-                @include rounded(0 0 20px 20px);
-                @include box-shadow(0 2px 6px 0 rgba(0,0,0,.4));
-            }
-        }
-        .camping-for-popups {
-            .popup-step-two {
-                display: none;
-            }
-        }
         .contract-header {
             &.pending {
                 background-color: $pending;
@@ -1108,6 +1060,56 @@
                 background-color: $cancelled;
             }
         }
+        .contract-footer, .contract-body {
+            .wrapper {
+                background-color: #ebebeb;
+                color: #888888;
+                @include rounded(0 0 20px 20px);
+                @include box-shadow(0 2px 6px 0 rgba(0,0,0,.4));
+            }
+        }
+        .contract-footer {
+            .steps-navigation {
+                border-top: 1.5px solid #d2d2d2;  
+                a {
+                    width: 50%;
+                    display: inline-block;
+                    text-align: center;
+                    color: #888888;
+                    padding: 10px 5px;
+                    .white-check, .gray-check {
+                        display: none;
+                    }
+                    &.passed-step {
+                        .white-check {
+                            display: none;
+                        }
+                        .gray-check {
+                            display: inline-block;
+                            vertical-align: middle;
+                        }
+                        &.active {
+                            .white-check {
+                                display: inline-block;
+                                vertical-align: middle;
+                            }
+                            .gray-check {
+                                display: none;
+                            }
+                        }
+                    }
+                    &.active {
+                        color: white;
+                        background-color: $blue_green_color;
+                    }
+                }
+            }
+        }
+        .camping-for-popups {
+            .popup-step-two {
+                display: none;
+            }
+        }
         @include breakpoint($xs) {
             .contract-participant {
                 width: calc(50% - 15px);
@@ -1120,7 +1122,7 @@
                 .contract-header {
                     width: 100%;
                 }
-                .wrapper {
+                .wrapper, .steps-navigation {
                     display: none;
                 }
             }
