--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -1158,9 +1158,10 @@
   background-color: #239289; }
 .module.single-contract-tile .contract-header.cancelled {
   background-color: #e92f30; }
-.module.single-contract-tile .contract-footer .wrapper, .module.single-contract-tile .contract-body .wrapper {
+.module.single-contract-tile .contract-footer .wrapper {
   background-color: #ebebeb;
   color: #888888;
+  overflow: hidden;
   -webkit-border-radius: 0 0 20px 20px;
   -moz-border-radius: 0 0 20px 20px;
   -ms-border-radius: 0 0 20px 20px;
@@ -1169,27 +1170,27 @@
   -moz-box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.4);
   -ms-box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.4);
   box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.4); }
-.module.single-contract-tile .contract-footer .steps-navigation {
+.module.single-contract-tile .contract-footer .steps-navigation, .module.single-contract-tile .contract-body .steps-navigation {
   border-top: 1.5px solid #d2d2d2; }
-  .module.single-contract-tile .contract-footer .steps-navigation a {
+  .module.single-contract-tile .contract-footer .steps-navigation a, .module.single-contract-tile .contract-body .steps-navigation a {
     width: 50%;
     display: inline-block;
     text-align: center;
     color: #888888;
     padding: 10px 5px; }
-    .module.single-contract-tile .contract-footer .steps-navigation a .white-check, .module.single-contract-tile .contract-footer .steps-navigation a .gray-check {
+    .module.single-contract-tile .contract-footer .steps-navigation a .white-check, .module.single-contract-tile .contract-footer .steps-navigation a .gray-check, .module.single-contract-tile .contract-body .steps-navigation a .white-check, .module.single-contract-tile .contract-body .steps-navigation a .gray-check {
       display: none; }
-    .module.single-contract-tile .contract-footer .steps-navigation a.passed-step .white-check {
+    .module.single-contract-tile .contract-footer .steps-navigation a.passed-step .white-check, .module.single-contract-tile .contract-body .steps-navigation a.passed-step .white-check {
       display: none; }
-    .module.single-contract-tile .contract-footer .steps-navigation a.passed-step .gray-check {
+    .module.single-contract-tile .contract-footer .steps-navigation a.passed-step .gray-check, .module.single-contract-tile .contract-body .steps-navigation a.passed-step .gray-check {
       display: inline-block;
       vertical-align: middle; }
-    .module.single-contract-tile .contract-footer .steps-navigation a.passed-step.active .white-check {
+    .module.single-contract-tile .contract-footer .steps-navigation a.passed-step.active .white-check, .module.single-contract-tile .contract-body .steps-navigation a.passed-step.active .white-check {
       display: inline-block;
       vertical-align: middle; }
-    .module.single-contract-tile .contract-footer .steps-navigation a.passed-step.active .gray-check {
+    .module.single-contract-tile .contract-footer .steps-navigation a.passed-step.active .gray-check, .module.single-contract-tile .contract-body .steps-navigation a.passed-step.active .gray-check {
       display: none; }
-    .module.single-contract-tile .contract-footer .steps-navigation a.active {
+    .module.single-contract-tile .contract-footer .steps-navigation a.active, .module.single-contract-tile .contract-body .steps-navigation a.active {
       color: white;
       background-color: #126585; }
 .module.single-contract-tile .camping-for-popups .popup-step-two {
