--- a/public/assets/scss/additionals/_modules.scss
+++ b/public/assets/scss/additionals/_modules.scss
@@ -1060,17 +1060,18 @@
                 background-color: $cancelled;
             }
         }
-        .contract-footer, .contract-body {
+        .contract-footer {
             .wrapper {
                 background-color: #ebebeb;
                 color: #888888;
+                overflow: hidden;
                 @include rounded(0 0 20px 20px);
                 @include box-shadow(0 2px 6px 0 rgba(0,0,0,.4));
             }
         }
-        .contract-footer {
+        .contract-footer, .contract-body {
             .steps-navigation {
-                border-top: 1.5px solid #d2d2d2;  
+                border-top: 1.5px solid #d2d2d2;
                 a {
                     width: 50%;
                     display: inline-block;
