--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8705,6 +8705,8 @@ select.select-mac-fix {
   -moz-box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.4);
   -ms-box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.4);
   box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.4); }
+  .module.single-contract-tile .contract-footer .wrapper .timer-label {
+    text-transform: uppercase; }
 .module.single-contract-tile .contract-footer .steps-navigation, .module.single-contract-tile .contract-body .steps-navigation {
   border-top: 1.5px solid #d2d2d2; }
   .module.single-contract-tile .contract-footer .steps-navigation a, .module.single-contract-tile .contract-body .steps-navigation a {
